; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/bearssl/src/symcipher/extr_des_ct.c_br_des_ct_keysched.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/bearssl/src/symcipher/extr_des_ct.c_br_des_ct_keysched.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @br_des_ct_keysched(i32* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %8 = load i64, i64* %7, align 8
  switch i64 %8, label %29 [
    i64 8, label %9
    i64 16, label %13
  ]

9:                                                ; preds = %3
  %10 = load i32*, i32** %5, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = call i32 @keysched_unit(i32* %10, i8* %11)
  store i32 1, i32* %4, align 4
  br label %46

13:                                               ; preds = %3
  %14 = load i32*, i32** %5, align 8
  %15 = load i8*, i8** %6, align 8
  %16 = call i32 @keysched_unit(i32* %14, i8* %15)
  %17 = load i32*, i32** %5, align 8
  %18 = getelementptr inbounds i32, i32* %17, i64 32
  %19 = load i8*, i8** %6, align 8
  %20 = getelementptr inbounds i8, i8* %19, i64 8
  %21 = call i32 @keysched_unit(i32* %18, i8* %20)
  %22 = load i32*, i32** %5, align 8
  %23 = getelementptr inbounds i32, i32* %22, i64 32
  %24 = call i32 @br_des_rev_skey(i32* %23)
  %25 = load i32*, i32** %5, align 8
  %26 = getelementptr inbounds i32, i32* %25, i64 64
  %27 = load i32*, i32** %5, align 8
  %28 = call i32 @memcpy(i32* %26, i32* %27, i32 128)
  store i32 3, i32* %4, align 4
  br label %46

29:                                               ; preds = %3
  %30 = load i32*, i32** %5, align 8
  %31 = load i8*, i8** %6, align 8
  %32 = call i32 @keysched_unit(i32* %30, i8* %31)
  %33 = load i32*, i32** %5, align 8
  %34 = getelementptr inbounds i32, i32* %33, i64 32
  %35 = load i8*, i8** %6, align 8
  %36 = getelementptr inbounds i8, i8* %35, i64 8
  %37 = call i32 @keysched_unit(i32* %34, i8* %36)
  %38 = load i32*, i32** %5, align 8
  %39 = getelementptr inbounds i32, i32* %38, i64 32
  %40 = call i32 @br_des_rev_skey(i32* %39)
  %41 = load i32*, i32** %5, align 8
  %42 = getelementptr inbounds i32, i32* %41, i64 64
  %43 = load i8*, i8** %6, align 8
  %44 = getelementptr inbounds i8, i8* %43, i64 16
  %45 = call i32 @keysched_unit(i32* %42, i8* %44)
  store i32 3, i32* %4, align 4
  br label %46

46:                                               ; preds = %29, %13, %9
  %47 = load i32, i32* %4, align 4
  ret i32 %47
}

declare dso_local i32 @keysched_unit(i32*, i8*) #1

declare dso_local i32 @br_des_rev_skey(i32*) #1

declare dso_local i32 @memcpy(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
